--- a/hugo.toml
+++ b/hugo.toml
@@ -37,5 +37,10 @@ home = ["HTML", "RSS", "JSON"]
 #    name = "Workshops"
 #    url = "/workshops"
 #    weight = 1
+  [[menu.main]]
+    identifier = "recommendations"
+    name = "Syllabus"
+    url = "/recommendations"
+    weight = 1
 
 #["static/38c3.css", "static/custom.css"]
