--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://relationship-geeks.github.io/'
+baseURL = 'https://workshop.relationship-geeks.de'
 languageCode = 'en-us'
 title = '38C3|Relationship Geeks'
 enableRobotsTXT = true
